Fix overflow on sources and quickvalues tables

--- a/app/assets/stylesheets/graylog2.less
+++ b/app/assets/stylesheets/graylog2.less
@@ -2079,6 +2079,10 @@ form.edit-dashboard-form {
   margin-top: 15px;
 }
 
+table .dc-table-column {
+  word-break: break-all;
+}
+
 .sources th,
 .quickvalues-table th {
   background-color: #333;
